--- a/cultos.html
+++ b/cultos.html
@@ -1,5 +1,24 @@
 
-<!DOCTYPE html><html lang="pt-BR">
-<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cultos</title><link rel="stylesheet" href="style.css"></head>
-<body><header><h1>Cultos</h1></header><main><p>Horários e tipos de cultos serão exibidos aqui.</p></main><footer><a href="index.html">Voltar</a></footer></body></html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cultos - Missão Mundial Servos</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Horários dos Cultos</h1>
+  </header>
+  <main>
+    <ul>
+      <li><strong>Terça-feira:</strong> Culto dos Homens e das Mulheres – 19:30</li>
+      <li><strong>Quarta-feira:</strong> Culto Boa Noite Espírito Santo – 19:30</li>
+      <li><strong>Sexta-feira:</strong> Culto de Libertação e Milagres – 19:30</li>
+      <li><strong>Domingo:</strong> Culto da Sagrada Família – 19:00</li>
+    </ul>
+  </main>
+  <footer><a href="index.html">Voltar para o início</a></footer>
+</body>
+</html>
